# home-finance-mvp

./: .gitignore  AGENTS.md  README.md  REDESIGN_FOR_UX_ENHANCEMENT.md  app.py  coa_template.xlsx  l1-accounts-taxonomy.md  pyproject.toml  reproduce_error.py
.agent/rules/: home-finance-mvp.md
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 1b4b7e8a9b10_add_subscriptions_table.py  4c8d1f2a9b7a_add_investment_asset_schema.py  7639e42c4c35_initial_schema_with_v2_coa.py  9f44f1c4c8b9_add_settings_and_fx_rates.py  c16c8700bb4f_advanced_assets_and_loans.py
core/: db.py  models.py  schema.sql
core/integrations/: interfaces.py
core/integrations/providers/: fx_providers.py  (+1 more)
core/seeds/: seed_coa.csv
core/services/: account_service.py  asset_service.py  asset_transaction_service.py  fx_service.py  ledger_service.py  loan_service.py  market_data_service.py  settings_service.py  subscription_service.py  valuation_service.py
core/ui/: formatting.py
data/: app.db
docs/coa_ui/: refactor_plan.md
docs/multi-currency/: multi-currency-plan.md
migrations/: 001_init_schema.sql  002_seed_accounts.sql  003_add_opening_balance_accounts.sql  003_expand_accounts.sql  004_add_accounts_level_fields.sql  005_promote_seed_accounts_to_system.sql  006_seed_l1_accounts_taxonomy.sql  007_multi_currency_foundation.sql  010_market_data.sql  011_add_asset_valuations.sql  012_restructure_account_ids.sql
pages/: 0_Opening_Balance.py  1_Dashboard.py  2_Transactions.py  3_Assets.py  4_Ledger.py  5_Reports.py  6_Settings.py  7_Accounts.py  7_CoA.py  7_Subscriptions.py  8_Loans.py  9_Investments.py
tests/: conftest.py  test_account_groups.py  test_asset_reconciliation.py  test_asset_service.py  test_ledger_balance_sheet.py  test_loan_service.py  test_multi_currency_ledger.py  test_opening_balance.py  test_subscriptions.py
ui/: utils.py
(+10 files in other folders)
